# Cotador-de-moeda-API

./: .gitignore  README.md  REQUISITOS_ATENDIDOS.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scripts/: send_notification.py
src/: cotacao.py
tests/: test_cotacao.py  test_cotacao_avancado.py  test_cotacao_simples.py
